package com.dekinci.eden.animal;

public interface Animal {
}
