package com.dekinci.eden.model.animal;

public class Decisions {
    public static final int DECISIONS_AMOUNT = 11;

    public static final byte MOVE_TS = 0;
    public static final byte MOVE_TR = 1;

    public static final byte MOVE_RS = 2;
    public static final byte MOVE_RB = 3;

    public static final byte MOVE_BS = 4;
    public static final byte MOVE_BL = 5;

    public static final byte MOVE_LS = 6;
    public static final byte MOVE_LT = 7;

    public static final byte FEED = 8;
    public static final byte BREED = 9;
    public static final byte DO_NOTHING = 10;
}
