package com.dekinci.eden.model.animal;

public class Genotype {
}
