package com.dekinci.eden.utils;

public interface ResultCallback<Result> extends Callback<Result, Throwable , String> {
}
